# trails

./: .env.example  .gitignore  README.md  docker-compose.yml
client-python/: pyproject.toml
client-python/tests/: test_client.py
client-python/trails/: __init__.py  client.py  types.py
client-rust/: Cargo.toml
client-rust/examples/: basic.rs
client-rust/src/: lib.rs
conformance/: README.md
conformance/tests/: 001_register.json  002_status.json  003_result.json  004_error.json  005_disconnect.json  006_crash_detection.json  007_reconnect.json
docs/: docker-install.md  docs1.md
docs/specs/: Trails-Addendum-0.md  Trails-Addendum-1.md  Trails-Addendum-2.md  Trails-Addendum-3.md  Trails-Addendum-4.md  Trails-Addendum-5.md  specs.md
scripts/: t1.py
server/: Cargo.toml  Dockerfile
server/migrations/: 001_init.sql
server/src/: config.rs  db.rs  error.rs  lifecycle.rs  main.rs  state.rs  types.rs  ws.rs
