[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trails"
version = "0.1.0"
description = "TRAILS client — Tree-scoped Relay for Application Info, Lifecycle, and Signaling"
readme = "README.md"
license = {text = "Apache-2.0 OR MIT"}
requires-python = ">=3.9"
authors = [
    {name = "GssMahadevan"},
]
keywords = ["trails", "lifecycle", "orchestration", "distributed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "websockets>=12.0",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
include = ["trails*"]
