[package]
name = "trailsd"
version = "0.1.0"
edition = "2021"
description = "TRAILS server — Tree-scoped Relay for Application Info, Lifecycle, and Signaling"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/trailsd/trails"

[[bin]]
name = "trailsd"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP + WebSocket
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Postgres
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Cryptography (Ed25519 — keys generated Phase 1, signing enforced later)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Concurrent state
dashmap = "6"

# Utility
hostname = "0.4"
thiserror = "2"
